--- a/package.json
+++ b/package.json
@@ -4,13 +4,18 @@
   "description": "Sub component for Tools to select, edit, comment, bookmarking verses.",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha"
   },
   "repository": {
     "type": "git"
   },
   "dependencies": {
     "babel-preset-react": "^6.16.0",
+    "lodash": "^4.17.4",
     "usfm-parser": "^0.1.6"
+  },
+  "devDependencies": {
+    "chai": "^4.1.1",
+    "mocha": "^3.5.0"
   }
 }
