--- a/package.json
+++ b/package.json
@@ -11,8 +11,7 @@
   },
   "dependencies": {
     "babel-preset-react": "^6.16.0",
-    "lodash": "^4.17.4",
-    "usfm-parser": "^0.1.6"
+    "lodash": "^4.17.4"
   },
   "devDependencies": {
     "chai": "^4.1.1",
