--- a/package.json
+++ b/package.json
@@ -32,8 +32,8 @@
     "eslint": "^4.7.2",
     "eslint-plugin-react": "^7.4.0",
     "jest": "^21.1.0",
-    "react-test-renderer": "^15.6.1",
-    "jsdom": "^11.2.0"
+    "jsdom": "^11.3.0",
+    "react-test-renderer": "^15.6.1"
   },
   "dependencies": {
     "lodash": "^4.17.4",
