--- a/package.json
+++ b/package.json
@@ -33,7 +33,8 @@
     "eslint-plugin-react": "^7.4.0",
     "jest": "^21.1.0",
     "jsdom": "^11.3.0",
-    "react-test-renderer": "^15.6.1"
+    "react-test-renderer": "^15.6.1",
+    "react-bootstrap": "^0.30.7"
   },
   "dependencies": {
     "lodash": "^4.17.4",
