--- a/package.json
+++ b/package.json
@@ -35,9 +35,11 @@
     "fs-extra": "^5.0.0",
     "jest": "^21.1.0",
     "jsdom": "^11.3.0",
+    "lodash": "^4.17.4",
+    "material-ui": "^0.20.0",
     "react": "^15.6.2",
     "react-addons-test-utils": "^15.4.2",
-    "react-bootstrap": "^0.30.7",
+    "react-bootstrap": "^0.30.10",
     "react-dnd": "^2.5.4",
     "react-dnd-html5-backend": "^2.5.4",
     "react-dom": "^15.4.2",
@@ -46,7 +48,6 @@
     "react-test-renderer": "^15.6.1"
   },
   "dependencies": {
-    "lodash": "^4.17.4",
     "prop-types": "^15.5.10"
   }
 }
