--- a/package.json
+++ b/package.json
@@ -30,10 +30,13 @@
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
     "enzyme": "^2.9.1",
-    "eslint": "^4.10.0",
-    "eslint-plugin-react": "^7.4.0",
+    "eslint": "^4.13.1",
+    "eslint-plugin-react": "^7.5.1",
+    "fs-extra": "^5.0.0",
     "jest": "^21.1.0",
     "jsdom": "^11.3.0",
+    "lodash": "^4.17.4",
+    "material-ui": "^0.20.0",
     "react": "^15.6.2",
     "react-addons-test-utils": "^15.4.2",
     "react-bootstrap": "^0.30.10",
@@ -42,12 +45,9 @@
     "react-dom": "^15.4.2",
     "react-redux": "^5.0.6",
     "react-remarkable": "^1.1.3",
-    "react-test-renderer": "^15.6.2",
-    "react-test-renderer": "^15.6.1",
-    "react-bootstrap": "^0.30.7"
+    "react-test-renderer": "^15.6.1"
   },
   "dependencies": {
-    "lodash": "^4.17.4",
     "prop-types": "^15.5.10"
   }
 }
