--- a/package.json
+++ b/package.json
@@ -11,7 +11,11 @@
       "src/**/*.{js,jsx}",
       "!**/node_modules/**"
     ],
-    "coverageDirectory": "coverage"
+    "coverageDirectory": "coverage",
+    "setupFiles": [
+      "./testSetUp/shim.js",
+      "./testSetUp/enzyme.js"
+    ]
   },
   "repository": {
     "type": "git",
@@ -23,19 +27,20 @@
   },
   "homepage": "https://github.com/translationCoreApps/VerseCheck#readme",
   "devDependencies": {
-    "jsdom": "^11.3.0",
-    "lodash": "^4.17.4",
     "babel-eslint": "^8.0.0",
     "babel-jest": "^21.0.2",
     "babel-plugin-transform-object-rest-spread": "6.26.0",
     "babel-preset-env": "1.6.1",
     "babel-preset-es2015": "6.24.1",
     "babel-preset-react": "6.24.1",
-    "enzyme": "2.9.1",
+    "enzyme": "^3.3.0",
+    "enzyme-adapter-react-16": "^1.1.1",
     "eslint": "^4.13.1",
     "eslint-plugin-react": "^7.5.1",
     "fs-extra": "3.0.1",
     "jest": "^21.1.0",
+    "jsdom": "^11.3.0",
+    "lodash": "^4.17.4",
     "material-ui": "0.17.4",
     "react-addons-test-utils": "^15.4.2",
     "react-bootstrap": "^0.32.0",
@@ -49,6 +54,6 @@
     "xregexp": "3.2.0"
   },
   "dependencies": {
-    "prop-types": "^15.6.0"
+    "prop-types": "15.6.0"
   }
 }
