--- a/package.json
+++ b/package.json
@@ -27,33 +27,27 @@
   },
   "homepage": "https://github.com/translationCoreApps/VerseCheck#readme",
   "devDependencies": {
-    "babel-eslint": "^8.0.0",
-    "babel-jest": "^21.0.2",
+    "enzyme-adapter-react-16": "^1.1.1",
+    "jsdom": "11.5.1",
+    "enzyme": "3.3.0",
+    "fs-extra": "5.0.0",
+    "react-addons-test-utils": "15.6.2",
+    "react-bootstrap": "0.30.10",
+    "babel-eslint": "8.2.1",
+    "babel-jest": "21.2.0",
     "babel-plugin-transform-object-rest-spread": "6.26.0",
     "babel-preset-env": "1.6.1",
     "babel-preset-es2015": "6.24.1",
     "babel-preset-react": "6.24.1",
-    "enzyme": "^3.3.0",
-    "enzyme-adapter-react-16": "^1.1.1",
-    "eslint": "^4.13.1",
-    "eslint-plugin-react": "^7.5.1",
-    "fs-extra": "3.0.1",
-    "jest": "^21.1.0",
-    "jsdom": "^11.3.0",
-    "lodash": "^4.17.4",
-    "material-ui": "0.17.4",
-    "react-addons-test-utils": "^15.4.2",
-    "react-bootstrap": "^0.32.0",
-    "react-container-dimensions": "1.3.3",
-    "react-dnd": "2.5.4",
-    "react-dnd-html5-backend": "2.5.4",
-    "react-redux": "5.0.6",
-    "react-remarkable": "1.1.3",
-    "react-test-renderer": "^15.6.2",
-    "usfm-js": "1.0.0-beta.17.2",
-    "xregexp": "3.2.0"
+    "eslint": "4.15.0",
+    "eslint-plugin-react": "7.5.1",
+    "jest": "21.2.1",
+    "react-test-renderer": "15.6.2"
   },
   "dependencies": {
-    "prop-types": "15.6.0"
+    "prop-types": "15.6.0",
+    "lodash": "4.17.4",
+    "usfm-js": "1.0.0-beta.17.2",
+    "material-ui":"0.20.0"
   }
 }
