--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "react-bootstrap": "0.32.0"
   },
   "dependencies": {
+    "deep-equal": "^1.0.1",
     "prop-types": "15.6.0",
     "lodash": "4.17.4",
     "material-ui": "0.20.0",
