--- a/package.json
+++ b/package.json
@@ -27,7 +27,6 @@
   },
   "homepage": "https://github.com/translationCoreApps/VerseCheck#readme",
   "devDependencies": {
-    "jsdom": "11.3.0",
     "babel-eslint": "8.0.0",
     "babel-jest": "21.0.2",
     "babel-plugin-transform-object-rest-spread": "6.26.0",
@@ -36,10 +35,12 @@
     "babel-preset-react": "6.24.1",
     "enzyme": "3.3.0",
     "enzyme-adapter-react-16": "1.1.1",
+    "enzyme-to-json": "^3.3.3",
     "eslint": "4.15.0",
     "eslint-plugin-react": "7.5.1",
     "fs-extra": "5.0.0",
     "jest": "21.1.0",
+    "jsdom": "11.3.0",
     "react-addons-test-utils": "15.6.2",
     "react-bootstrap": "0.32.0"
   },
