--- a/package.json
+++ b/package.json
@@ -51,7 +51,7 @@
     "material-ui": "0.20.0",
     "react": "16.2.0",
     "react-dom": "16.2.0",
-    "tc-tool": "1.1.0",
+    "tc-tool": "^1.3.0",
     "usfm-js": "1.0.0-beta.17.2"
   }
 }
