--- a/package.json
+++ b/package.json
@@ -46,11 +46,12 @@
   },
   "dependencies": {
     "deep-equal": "^1.0.1",
-    "prop-types": "15.6.0",
     "lodash": "4.17.4",
     "material-ui": "0.20.0",
+    "prop-types": "15.6.0",
     "react": "16.2.0",
     "react-dom": "16.2.0",
+    "selections": "^0.1.5",
     "tc-tool": "1.3.0",
     "usfm-js": "1.0.0-beta.17.2"
   }
