--- a/package.json
+++ b/package.json
@@ -51,7 +51,8 @@
     "prop-types": "15.6.0",
     "react": "16.2.0",
     "react-dom": "16.2.0",
-    "selections": "^0.1.5",
+    "selections": "^0.1.7",
+    "tc-strings": "^0.1.7",
     "tc-tool": "1.3.0",
     "usfm-js": "1.0.0-beta.17.2"
   }
