--- a/package.json
+++ b/package.json
@@ -53,7 +53,7 @@
     "react-dom": "16.2.0",
     "selections": "^0.1.7",
     "tc-strings": "^0.1.7",
-    "tc-tool": "1.3.0",
+    "tc-tool": "^1.5.0",
     "usfm-js": "1.0.0-beta.17.2"
   }
 }
